--- a/sic/templates/posts/submit.html
+++ b/sic/templates/posts/submit.html
@@ -83,7 +83,7 @@
             {{ form.kind }}
         </fieldset>
         <div class="button-flex-box">
-            <input type="submit" value="Submit">
+            <input class="heavy-positive-action" type="submit" value="Submit">
             <input type="submit" name="preview" value="Preview">
         </div>
     </form>
