--- a/sic/templates/index.html
+++ b/sic/templates/index.html
@@ -39,6 +39,9 @@
             -webkit-box-orient: vertical;
             overflow: hidden;
         }
+        a.agg-name, a.agg-name:visited {
+            color: black;
+        }
     </style>
 {% endblock %}
 {% block content %}
